--- a/react-component/package.json
+++ b/react-component/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
-    "build": "parcel build"
+    "build": "parcel build",
+    "serve": "http-server ./dist -p 9991"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,8 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@parcel/transformer-vue": "^2.3.2",
-    "parcel": "^2.3.2"
+    "parcel": "^2.3.2",
+    "http-server": "^14.1.0"
   },
   "dependencies": {
     "react": "^17.0.2",
