--- a/vue-component/package.json
+++ b/vue-component/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
-    "build": "parcel build"
+    "build": "parcel build",
+    "serve": "http-server ./dist -p 9992"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-vue": "^2.3.2",
-    "parcel": "^2.3.2"
+    "parcel": "^2.3.2",
+    "http-server": "^14.1.0"
   },
   "dependencies": {
     "vue": "^3.2.31"
